--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <h2>Le Ciel</h2>
             <p>Yasashii utagoe ni michibikarete... <br>Nakare ochiru masshirona namida ga kaze ni fukare toki wo kizamu </p>
             <a href="https://www.youtube.com/watch?v=zbcLqeIrVrI" target="_blank">Link</a>
+            <p>boku wo miru kegare wo shiranai hitomi wa
+            <br>hateshinaku dokomademo tsuzuku daichi wo utsushi
+            <br>chiisana yubi de wasureteita boku no namida no ato wo nazoru 
+            </p>
         </div>
     </body>
 </html>
