--- a/index.html
+++ b/index.html
@@ -9,12 +9,25 @@
         <div class="container">
             <h1>Malice Mizer</h1>
             <h2>Le Ciel</h2>
-            <p>Yasashii utagoe ni michibikarete... <br>Nakare ochiru masshirona namida ga kaze ni fukare toki wo kizamu </p>
-            <a href="https://www.youtube.com/watch?v=zbcLqeIrVrI" target="_blank">Link</a>
+            <p>Yasashii utagoe ni michibikarete... <br>Nakare ochiru masshirona namida ga kaze ni fukare toki wo kizamu</p>
             <p>boku wo miru kegare wo shiranai hitomi wa
             <br>hateshinaku dokomademo tsuzuku daichi wo utsushi
-            <br>chiisana yubi de wasureteita boku no namida no ato wo nazoru 
+            <br>chiisana yubi de wasureteita boku no namida no ato wo nazoru</p>
+            <p>kimi no hozoku sukitooru koe ga boku wo hanasanai
+            <br>boku ga koko ni itsuzukeru koto wa dekinainoni... 
+            <br>
+            Ah... kobore ochiru namida wa owakare no kotoba<br>
+            <br>
+            nanimo kikazu tada boku no mune ni te wo ate hohoemi wo ukabe<br>
+            <br>
+            kimi no hoho ni kuchizuke wo... boku wa kimi wo wasurenai<br>
+            motto tsuyoku dakishimete boku ga sora ni kaeru made<br>
+            kimi no hosoku sukitooru koe ga boku wo hanasanai<br>
+            motto tsuyoku dakishimete boku ga kienai youni... <br>
+            <br>
+            boku ga kienai youni...<br>
             </p>
+            <a href="https://www.youtube.com/watch?v=zbcLqeIrVrI" target="_blank">Link</a>
         </div>
     </body>
 </html>
