Add font to style.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="container">
             <h1>Malice Mizer</h1>
-            <h2>Le Ciel</h2>
+            <h2>- Le Ciel -</h2>
             <p>Yasashii utagoe ni michibikarete... <br>Nakare ochiru masshirona namida ga kaze ni fukare toki wo kizamu</p>
             <p>boku wo miru kegare wo shiranai hitomi wa
             <br>hateshinaku dokomademo tsuzuku daichi wo utsushi
@@ -27,6 +27,7 @@
             <br>
             boku ga kienai youni...<br>
             </p>
+            <h2>-</h2>
             <a href="https://www.youtube.com/watch?v=zbcLqeIrVrI" target="_blank">Link</a>
         </div>
     </body>
