Change text in h1

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>Malice Mizer</h1>
+            <h1>Kaliber 44!</h1>
             <h2>- Le Ciel -</h2>
             <p>Yasashii utagoe ni michibikarete... <br>Nakare ochiru masshirona namida ga kaze ni fukare toki wo kizamu</p>
             <p>boku wo miru kegare wo shiranai hitomi wa
